# python_labs

./: .coverage  README.md  pyproject.toml
data/lab08/: students_input.json
data/lab09/: student.csv  students.csv
lib/: __init__.py  func1.py  text.py
python_labs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lab01/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: text.py  texts_stats.py
src/lab04/: Table.csv  Text.txt  io_txt_csv_A.py  io_txt_csv_B.py
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: cli_convert.py  cli_text.py
src/lab08/: models.py  serialize.py
src/lab09/: __init__.py  group.py
src/lab10/: README.md  linkedlist.py  structures.py
src/lib/: func1.py  text.py
src/python_labs.egg-info/: SOURCES.txt  top_level.txt
tests/: test_group.py  test_json_csv.py  test_text.py
