# 1. СИСТЕМА СБОРКИ
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

# 2. МЕТАДАННЫЕ ПРОЕКТА
[project]
name = "python-labs"
version = "0.1.0"
description = "Сборник учебных лабораторных работ по Python"
readme = "README.md"
requires-python = ">=3.11"

# 3. ЗАВИСИМОСТИ
# runtime
dependencies = [
  "openpyxl==3.1.5",
]

# optional
[project.optional-dependencies]
dev = [
  "pytest==9.0.1",
  "pytest-cov==7.0.0",
  "black==25.11.0",
]

# 4. НАСТРОЙКИ SETUPTOOLS (ПАКЕТЫ)
[tool.setuptools]
packages = [
    "lib",
    "src", 
    "tests",
]

# 5. НАСТРОЙКИ PYTEST
[tool.pytest.ini_options]
pythonpath = [
    ".", "src", "lib"
]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

# 6. НАСТРОЙКИ BLACK
[tool.black]
line-length = 88  
target-version = ["py311"]
extend-exclude = '''
(
  ^\.(venv|env)/|
  ^data/|
  ^images/
)
'''